# design-cpp

./: .gitignore  README.md  all_cat_plot.sh  all_plot.sh  asm_prettify.sh  bench_prettify.sh  compile_commands.json  meson.build  new_design.sh  regen.sh  regen_all_design.sh  regen_all_designs.sh
alt_bridge/: bench.cpp  meson.build
alt_bridge/include/: lib.h
alt_bridge/src/: lib.cpp  main.cpp
bridge/: bench.cpp  bridge.plantuml  meson.build  tct.plantuml
bridge/include/: lib.h
bridge/src/: lib.cpp  main.cpp
prototype/: bench.cpp  meson.build  proto.plantuml
prototype/include/: lib.h
prototype/src/: lib.cpp  main.cpp
strategy/: bench.cpp  meson.build  strategy.plantuml
strategy/include/: lib.h
strategy/src/: lib.cpp  main.cpp
visitor/: bench.cpp  meson.build
visitor/include/: lib.h
visitor/src/: lib.cpp  main.cpp
